chore: fix admin logout when updating book
- account for potential errors by adding catch callbacks to some model calls
- change error messages to be more descriptive
- use approprite status code in user controller
- fix uneven background height on different viewport

--- a/client/src/assets/scss/styles.scss
+++ b/client/src/assets/scss/styles.scss
@@ -8,6 +8,7 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: rgba(0,0,0,0.02);
   position: relative;
+  background-attachment: fixed;
 }
 
 *{
